<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sd_action_client</name>
  <version>0.0.0</version>
  <description>test</description>
  <maintainer email="seio.inoue@tier4.jp">Seio Inoue</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>example_msg</depend>
  <depend>unique_identifier_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
